--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,20 +4,104 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/beerbg"
     tools:context=".activities.MainActivity">
-
-    <GridView
+    <View
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:columnWidth="100dp"
-        android:numColumns="3"
-        android:id="@+id/main_activity_grid"
-        android:stretchMode="columnWidth"
-        android:gravity="center"
-        android:horizontalSpacing="3dp"
-        android:verticalSpacing="3dp"
-        android:background="@color/bgactivity"
-        />
+        android:alpha="0.5"
+        android:background="@color/gray" />
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
+
+    <EditText
+        android:id="@+id/activity_main_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="25dp"
+        android:layout_marginTop="250dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/custom_input"
+        android:drawableStart="@drawable/custom_email_icon"
+        android:drawablePadding="10dp"
+        android:textAlignment="center"
+        android:textColor="@color/textcolor"
+        android:hint="@string/emailhint"
+        android:inputType="textEmailAddress"
+        android:padding="10dp"
+        android:drawableLeft="@drawable/custom_email_icon"
+        android:gravity="center_horizontal" />
+
+    <EditText
+        android:id="@+id/activity_main_pass"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/activity_main_email"
+        android:layout_marginHorizontal="25dp"
+        android:layout_marginBottom="20dp"
+        android:textAlignment="center"
+        android:background="@drawable/custom_input"
+        android:drawableStart="@drawable/custom_pass_icon"
+        android:drawablePadding="10dp"
+        android:hint="@string/passhint"
+        android:inputType="textPassword"
+        android:padding="10dp"
+        android:drawableLeft="@drawable/custom_pass_icon"
+        android:gravity="center_horizontal" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_below="@+id/activity_main_pass"
+        >
+
+        <Button
+            android:id="@+id/activity_main_login"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="@string/login"
+            android:textAllCaps="false"
+            android:textColor="@color/btntextcolor"
+            android:textStyle="bold"
+            android:textSize="17sp"
+            android:background="@drawable/custombutton"
+            android:onClick="Login"
+            />
+
+        <Button
+            android:id="@+id/activity_main_register"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="@string/register"
+            android:textAllCaps="false"
+            android:textColor="@color/btntextcolor"
+            android:textStyle="bold"
+            android:textSize="17sp"
+            android:background="@drawable/custombutton"
+            android:layout_marginLeft="30dp"
+            android:layout_marginStart="30dp"
+            android:onClick="Register"
+            />
+
+        <Button
+            android:id="@+id/activity_main_forgotpass"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="Şifremi Unuttum"
+            android:textAllCaps="false"
+            android:textColor="@color/btntextcolor"
+            android:textStyle="bold"
+            android:textSize="17sp"
+            android:background="@drawable/custombutton"
+            android:layout_marginLeft="30dp"
+            android:layout_marginStart="30dp"
+            />
+
+    </LinearLayout>
 
 </RelativeLayout>
