--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,33 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center"
-    android:padding="5dp"
-    android:background="@color/bgactivity"
+    android:background="@drawable/beerbg"
     tools:context=".activities.RegisterActivity">
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0.5"
+        android:background="@color/gray" />
+
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
+
 
     <EditText
         android:id="@+id/activity_register_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/name"
-        android:textSize="17sp"
-        android:textColor="@color/textcolor"
+        android:layout_marginHorizontal="25dp"
+        android:layout_marginTop="200dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/custom_input"
+        android:drawableStart="@drawable/custom_name_surname_icon"
+        android:drawablePadding="10dp"
         android:textAlignment="center"
+        android:textColor="@color/textcolor"
+        android:hint="@string/name"
+        android:padding="10dp"
+        android:drawableLeft="@drawable/custom_name_surname_icon"
         android:gravity="center_horizontal"
         />
     <EditText
         android:id="@+id/activity_register_age"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/activity_register_name"
         android:hint="@string/age"
         android:textSize="17sp"
         android:textColor="@color/textcolor"
+        android:layout_marginHorizontal="25dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/custom_input"
+        android:drawableStart="@drawable/custom_name_surname_icon"
+        android:drawablePadding="10dp"
         android:textAlignment="center"
+        android:padding="10dp"
+        android:drawableLeft="@drawable/custom_name_surname_icon"
         android:gravity="center_horizontal"
         android:inputType="number"
         />
@@ -35,47 +59,78 @@
         android:id="@+id/activity_register_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/activity_register_age"
         android:hint="@string/emailhint"
         android:textSize="17sp"
         android:textColor="@color/textcolor"
         android:textAlignment="center"
         android:gravity="center_horizontal"
         android:inputType="textEmailAddress"
+        android:layout_marginHorizontal="25dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/custom_input"
+        android:drawableStart="@drawable/custom_email_icon"
+        android:drawablePadding="10dp"
+        android:padding="10dp"
+        android:drawableLeft="@drawable/custom_email_icon"
         />
     <EditText
         android:id="@+id/activity_register_pass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/activity_register_email"
         android:hint="@string/passhint"
         android:textSize="17sp"
         android:textColor="@color/textcolor"
         android:textAlignment="center"
         android:gravity="center_horizontal"
         android:inputType="textPassword"
+        android:layout_marginHorizontal="25dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/custom_input"
+        android:drawableStart="@drawable/custom_pass_icon"
+        android:drawablePadding="10dp"
+        android:padding="10dp"
+        android:drawableLeft="@drawable/custom_pass_icon"
         />
     <EditText
         android:id="@+id/activity_register_passValidation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/activity_register_pass"
         android:hint="@string/passvalidation"
         android:textSize="17sp"
         android:textColor="@color/textcolor"
         android:textAlignment="center"
         android:gravity="center_horizontal"
         android:inputType="textPassword"
+        android:layout_marginHorizontal="25dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/custom_input"
+        android:drawableStart="@drawable/custom_pass_icon"
+        android:drawablePadding="10dp"
+        android:padding="10dp"
+        android:drawableLeft="@drawable/custom_pass_icon"
         />
-    <Button
-        android:id="@+id/activity_main_register"
-        android:layout_width="90dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/register"
-        android:textAllCaps="false"
-        android:textColor="@color/btntextcolor"
-        android:textStyle="bold"
-        android:textSize="17sp"
+        android:layout_below="@+id/activity_register_passValidation"
+        android:gravity="center"
         android:layout_marginTop="10dp"
-        android:background="@drawable/custombutton"
-        android:onClick="Register"
-        />
+        >
+        <Button
+            android:id="@+id/activity_main_register"
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:text="@string/register"
+            android:textAllCaps="false"
+            android:textColor="@color/btntextcolor"
+            android:textStyle="bold"
+            android:textSize="17sp"
+            android:background="@drawable/custombutton"
+            android:onClick="Register"
+            />
+    </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
