Veritabanından Profil Kısmına veri aktarımı sağlandı. Splash Page tasarımı yapıldı. Animasyonlar Eklendi.

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -17,4 +17,14 @@
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/menu_slideshow" />
     </group>
+
+    <item android:title="Ayarlar">
+        <menu>
+            <item
+                android:id="@+id/nav_logout"
+                android:icon="@drawable/ic_launcher_background"
+                android:title="Çıkış Yap" />
+        </menu>
+    </item>
+
 </menu>
