--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,14 +50,28 @@
         android:padding="10dp"
         android:drawableLeft="@drawable/custom_pass_icon"
         android:gravity="center_horizontal" />
+    <CheckBox
+        android:id="@+id/activity_main_checkbox"
+        android:layout_width="140dp"
+        android:layout_height="35dp"
+        android:layout_below="@+id/activity_main_pass"
+        android:layout_alignEnd="@+id/activity_main_pass"
+        android:gravity="center"
+        android:text="Beni Hatırla"
+        android:background="@drawable/custom_input"
+        android:textSize="17sp"
+        android:textColor="@color/btnbgcolor"
+        android:textStyle="bold"
+        android:layout_alignRight="@+id/activity_main_pass" />
 
     <LinearLayout
+        android:id="@+id/activity_main_btnContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:orientation="horizontal"
         android:gravity="center"
-        android:layout_below="@+id/activity_main_pass"
+        android:layout_below="@+id/activity_main_checkbox"
         >
 
         <Button
