--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="white">#FFFFFF</color>
     <color name="green">#22B14C</color>
     <color name="black">#FF000000</color>
+    <color name="colorSplash">#FFB400</color>
 </resources>
