--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -22,7 +22,7 @@
         <menu>
             <item
                 android:id="@+id/nav_logout"
-                android:icon="@drawable/ic_launcher_background"
+                android:icon="@drawable/logout"
                 android:title="Çıkış Yap" />
         </menu>
     </item>
