--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,9 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="5dp"
     android:layout_gravity="center"
-    android:gravity="center"
+    android:gravity="center_horizontal"
     android:background="@color/bgactivity"
     tools:context=".activities.ui.profile.ProfileFragment">
 
@@ -14,22 +13,18 @@
         android:id="@+id/fragment_profile_Image"
         android:layout_width="150dp"
         android:layout_height="150dp"
+        android:layout_marginTop="10dp"
+        android:background="@mipmap/ic_launcher"
         android:scaleType="fitXY" />
 
-    <ImageView
-        android:id="@+id/fragment_profile_changeImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/beer"
-        android:layout_toEndOf="@+id/fragment_profile_Image"
-        android:layout_toRightOf="@+id/fragment_profile_Image" />
 
     <TextView
         android:id="@+id/fragment_profile_Name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="vcxcxbcv"
         android:layout_below="@+id/fragment_profile_Image"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="5dp"
         android:textAlignment="center"
         android:textStyle="bold"
         android:textColor="@color/textcolor"
@@ -40,24 +35,42 @@
         android:id="@+id/fragment_profile_Age"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="21"
         android:layout_below="@+id/fragment_profile_Image"
         android:layout_toRightOf="@+id/fragment_profile_Name"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="5dp"
         android:layout_marginLeft="3dp"
         android:textAlignment="center"
         android:textStyle="bold"
         android:textColor="@color/textcolor"
         android:textSize="19sp"
         android:gravity="center_horizontal" />
+
     <TextView
         android:id="@+id/fragment_profile_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="mail"
         android:layout_below="@+id/fragment_profile_Name"
         android:layout_marginTop="10dp"
         android:textAlignment="center"
         android:textColor="@color/textcolor"
         android:textSize="19sp"
         android:gravity="center_horizontal" />
+
+    <Button
+        android:id="@+id/fragment_profile_Delete"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/fragment_profile_email"
+        android:layout_marginTop="40dp"
+        android:text="Hesabımı Sil"
+        android:textAllCaps="false"
+        android:textColor="@color/btntextcolor"
+        android:textStyle="bold"
+        android:textSize="17sp"
+        android:background="@drawable/danger_button"
+        android:onClick="DeleteUser"
+        />
 
 </RelativeLayout>
