--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="green">#22B14C</color>
     <color name="black">#FF000000</color>
     <color name="colorSplash">#FFB400</color>
+    <color name="red">#D32F2F</color>
 </resources>
