Tarif menüsü geldi. Profil menüsü düzenlendi. FireStore üzerinden dosya silme hatası giderildi.

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -14,8 +14,8 @@
             android:title="Profil" />
         <item
             android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:icon="@drawable/notes"
+            android:title="Bira Tariflerim" />
     </group>
 
     <item android:title="Ayarlar">
