--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,63 +6,93 @@
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:gravity="center_horizontal"
+    android:padding="5dp"
     android:background="@color/bgactivity"
     tools:context=".activities.ui.profile.ProfileFragment">
 
-    <ImageView
-        android:id="@+id/fragment_profile_Image"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+    <LinearLayout
+        android:id="@+id/fragment_profile_upContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center"
+        >
+        <ImageView
+            android:id="@+id/fragment_profile_Image"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/add"
+            android:scaleType="fitXY"
+            />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            >
+            <TextView
+                android:id="@+id/fragment_profile_Name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                android:textColor="@color/textcolor"
+                android:textSize="19sp"
+                android:gravity="center_horizontal" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <View
+        android:id="@+id/fragment_profile_line"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@+id/fragment_profile_upContainer"
+        android:background="@color/textcolor"
+        android:layout_marginTop="8dp"
+        />
+
+    <TextView
+        android:id="@+id/fragment_profile_textMail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/emailhint"
+        android:layout_below="@+id/fragment_profile_line"
         android:layout_marginTop="10dp"
-        android:background="@mipmap/ic_launcher"
-        android:scaleType="fitXY" />
-
-
-    <TextView
-        android:id="@+id/fragment_profile_Name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="vcxcxbcv"
-        android:layout_below="@+id/fragment_profile_Image"
-        android:layout_marginTop="5dp"
         android:textAlignment="center"
-        android:textStyle="bold"
         android:textColor="@color/textcolor"
         android:textSize="19sp"
-        android:gravity="center_horizontal" />
-
-    <TextView
-        android:id="@+id/fragment_profile_Age"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="21"
-        android:layout_below="@+id/fragment_profile_Image"
-        android:layout_toRightOf="@+id/fragment_profile_Name"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="3dp"
-        android:textAlignment="center"
         android:textStyle="bold"
-        android:textColor="@color/textcolor"
-        android:textSize="19sp"
+        android:layout_alignStart="@+id/fragment_profile_line"
         android:gravity="center_horizontal" />
-
     <TextView
         android:id="@+id/fragment_profile_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="mail"
-        android:layout_below="@+id/fragment_profile_Name"
+        android:layout_below="@+id/fragment_profile_line"
         android:layout_marginTop="10dp"
         android:textAlignment="center"
         android:textColor="@color/textcolor"
         android:textSize="19sp"
+        android:layout_alignEnd="@+id/fragment_profile_line"
         android:gravity="center_horizontal" />
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@+id/fragment_profile_email"
+        android:background="@color/textcolor"
+        android:layout_marginTop="8dp"
+        />
     <Button
         android:id="@+id/fragment_profile_Delete"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/fragment_profile_email"
+        android:layout_alignStart="@id/fragment_profile_textMail"
+        android:layout_alignEnd="@+id/fragment_profile_email"
         android:layout_marginTop="40dp"
         android:text="Hesabımı Sil"
         android:textAllCaps="false"
@@ -70,7 +100,6 @@
         android:textStyle="bold"
         android:textSize="17sp"
         android:background="@drawable/danger_button"
-        android:onClick="DeleteUser"
         />
 
 </RelativeLayout>
