--- a/app/src/main/res/layout/custom_note.xml
+++ b/app/src/main/res/layout/custom_note.xml
@@ -1,18 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="200dp"
-    android:layout_height="250dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="2dp"
     >
-    <ImageView
-        android:id="@+id/custom_note_beerPhoto"
-        android:layout_width="200dp"
-        android:layout_height="150dp"
-        android:background="@color/bgactivity"
-        android:scaleType="fitXY"
-        />
 
     <TextView
         android:id="@+id/custom_note_title"
