--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -93,6 +93,7 @@
         android:padding="10dp"
         android:drawableLeft="@drawable/custom_pass_icon"
         />
+
     <EditText
         android:id="@+id/activity_register_passValidation"
         android:layout_width="match_parent"
@@ -132,5 +133,29 @@
             android:onClick="Register"
             />
     </LinearLayout>
+
+    <CheckBox
+        android:id="@+id/activity_register_Visiblepass"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/activity_register_email"
+        android:layout_alignEnd="@id/activity_register_email"
+        android:layout_alignRight="@id/activity_register_email"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="5dp"
+        android:button="@drawable/checkbox_background"
+        android:checked="false" />
+
+    <CheckBox
+        android:id="@+id/activity_register_VisiblepassValidation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/activity_register_pass"
+        android:layout_alignEnd="@id/activity_register_pass"
+        android:layout_alignRight="@id/activity_register_pass"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="5dp"
+        android:button="@drawable/checkbox_background"
+        android:checked="false" />
 
 </RelativeLayout>
