--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -45,7 +45,7 @@
         android:id="@+id/activity_note_desc"
         android:text="desc"
         android:layout_width="match_parent"
-        android:layout_height="600dp"
+        android:layout_height="300dp"
         android:layout_below="@+id/activity_note_line"
         android:textColor="@color/textcolor"
         android:textSize="19sp"
@@ -54,5 +54,15 @@
         android:layout_marginTop="8dp"
         android:scrollbars = "vertical"
         tools:ignore="RtlCompat" />
+
+    <ImageView
+        android:id="@+id/activity_note_Image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/activity_note_desc"
+        android:layout_marginTop="5dp"
+        android:scaleType="fitXY"
+        android:adjustViewBounds="true"
+        />
 
 </RelativeLayout>
